@@ -43,6 +43,7 @@ Release @version@-@release@ Start 11/09/2023 End --/--/----
 35. qmail-local.c: added MESSID to the environment variables to be preserved
 - 24/09/2023
 36. spf.c: refactored code
+37. spf.h: removed reference to dead/not working spf explanation URLs
 
 * Fri Sep 08 2023 11:58:03 +0000 Manvendra Bhangui <indimail-mta@indimail.org> 3.0.4-1.1%{?dist}
 Release 3.0.4-1.1 Start 24/04/2023 End 08/09/2023
